fixing header on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,12 @@ body.blogpost header {
     max-width: 600px !important;
     margin: 1ch !important;
   } 
+
+  body.blogpost header {
+    margin-left: 1em !important;
+    margin-right: 1em !important;
+    max-width: 100% !important;
+  }
 }
 
 @view-transition {
